# sidex

./: Cargo.toml  package-lock.json
.github/workflows/: release.yml
crates/sidex-context/: Cargo.toml
crates/sidex-context/src/: lib.rs
crates/sidex-context/src/chunker/: ast_chunker.rs  chunk.rs  mod.rs
crates/sidex-context/src/embeddings/: local.rs  mod.rs  voyage.rs
crates/sidex-context/src/graph/: builder.rs  expansion.rs  mod.rs
crates/sidex-context/src/index/: incremental.rs  merkle.rs  mod.rs  watcher.rs
crates/sidex-context/src/predict/: cache.rs  mod.rs  predictor.rs
crates/sidex-context/src/search/: bm25.rs  budget.rs  hybrid.rs  mod.rs
crates/sidex-context/src/store/: mod.rs
crates/sidex-context/tests/: integration.rs  real_bench.rs
crates/sidex-db/src/: chat_sessions.rs  db.rs  lib.rs
src/: main.ts
src-tauri/: tauri.conf.json  tauri.sidex-ui.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  chat_sessions.rs  db_state.rs  mod.rs  terminal.rs
src/vs/workbench/contrib/markdown/browser/: markdown.contribution.ts  markdownPreview.ts
src/vs/workbench/contrib/sidexChat/browser/: sidexChat.contribution.ts  sidexChatView.ts
src/vs/workbench/contrib/sidexChat/browser/autocomplete/: sidexCompletionProvider.ts
src/vs/workbench/contrib/sidexChat/browser/context/: mentionResolver.ts
src/vs/workbench/contrib/sidexChat/browser/inline/: inlineEditController.ts  inlineEditInputWidget.ts
src/vs/workbench/contrib/sidexChat/browser/media/: sidexChatView.css
(+5 files in other folders)
